--- a/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
+++ b/RTSFramework/RTSFramework.Contracts/RTSFramework.Contracts.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Models\StatisticsReportData.cs" />
     <Compile Include="Models\VisualizationData.cs" />
     <Compile Include="SecondaryFeature\IDependenciesVisualizer.cs" />
+    <Compile Include="SecondaryFeature\IResponsibleChangesReporter.cs" />
     <Compile Include="SecondaryFeature\IStatisticsReporter.cs" />
     <Compile Include="Utilities\IApplicationClosedHandler.cs" />
     <Compile Include="Utilities\ILoggingHelper.cs" />
