--- a/RTSFramework/RTSFramework.Core/RTSFramework.Core.csproj
+++ b/RTSFramework/RTSFramework.Core/RTSFramework.Core.csproj
@@ -90,6 +90,7 @@
     <Compile Include="NoOpPrioritizer.cs" />
     <Compile Include="PercentageImpactedTestsStatisticsCollector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResponsibleChanges\ResponsibleChangesReporter.cs" />
     <Compile Include="StatisticsReportdataStringAdapter.cs" />
     <Compile Include="PercentageImpactedTestsStatisticCsvFileAdapter.cs" />
     <Compile Include="PercentageImpactedTestsStatistic.cs" />
