Font size changeable via app config file

--- a/RTSFramework/RTSFramework.GUI/App.config
+++ b/RTSFramework/RTSFramework.GUI/App.config
@@ -60,5 +60,6 @@
 		<add key="logToFile" value="true" />
 		<!-- Pathes relative to dll that is loaded - multiple split by semicolon-->
 		<add key="additionalReferences" value="..\..\Lib;" />
+		<add key="fontSize" value="14" />
 	</appSettings>
 </configuration>
