--- a/RTSFramework/RTSFramework.GUI/RTSFramework.GUI.csproj
+++ b/RTSFramework/RTSFramework.GUI/RTSFramework.GUI.csproj
@@ -421,10 +421,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if not exist "$(TargetDir)\OpenCover" mkdir "$(TargetDir)\OpenCover"
-if not exist "$(TargetDir)\VsTest" mkdir "$(TargetDir)\VsTest"
+    <PostBuildEvent>if not exist "$(TargetDir)\VsTest" mkdir "$(TargetDir)\VsTest"
 
-xcopy /E /Y /I /c "$(SolutionDir)packages\OpenCover.4.6.519\tools" "$(TargetDir)\OpenCover"
 xcopy /E /Y /I /c "$(SolutionDir)packages\Microsoft.TestPlatform.15.7.0\tools\net451" "$(TargetDir)\VsTest"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
