--- a/RTSFramework/RTSFramework.ViewModels/RTSFramework.ViewModels.csproj
+++ b/RTSFramework/RTSFramework.ViewModels/RTSFramework.ViewModels.csproj
@@ -138,7 +138,7 @@
     <Compile Include="RunConfigurations\UserSettings.cs" />
     <Compile Include="RunConfigurations\UserSettingsProvider.cs" />
     <Compile Include="RunStatus.cs" />
-    <Compile Include="Controller\StateBasedController.cs" />
+    <Compile Include="Controller\OfflineController.cs" />
     <Compile Include="MainWindowViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunConfigurations\ProcessingType.cs" />
